# mini-Oscilloscope

./: CMakeLists.txt  README.md  run.sh
components/i2c_oled/: CMakeLists.txt
components/wifi_sta/: CMakeLists.txt  wifi_sta.c
components/wifi_sta/include/: wifi_sta.h
main/: CMakeLists.txt  adc_reading.c  adc_reading.h  draw_ui.c  draw_ui.h  main.c  timer_config.c  timer_config.h
